--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -22,8 +22,13 @@
                     <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
                 </li>
                 <li class="main-header__item">
-                    <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add
+                    <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/uni/add-product">Add
                         Product
+                    </a>
+                </li>
+                <li class="main-header__item">
+                    <a class="<%= path === '/uni/add-uni' ? 'active' : '' %>" href="/uni/add-uni">Add
+                        University
                     </a>
                 </li>
 
